--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon" : "nodemon server/server.js"
+    "nodemon": "nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.0",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
