--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RESTServer",
+  "name": "restserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,5 +14,8 @@
     "express": "^4.17.0",
     "mongoose": "^5.5.11",
     "mongoose-unique-validator": "^2.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
