--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.0",
     "mongoose": "^5.5.11",
     "mongoose-unique-validator": "^2.0.3"
