--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bcrypt": "^3.0.6",
     "express": "^4.17.0",
     "mongoose": "^5.5.11",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
