--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "express": "^4.17.0",
+    "google-auth-library": "^4.2.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.11",
     "mongoose-unique-validator": "^2.0.3",
